[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docpolish"
version = "1.0.0"
description = "Lightweight Markdown Document Intelligent Beautification Engine"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Lobster AI", email = "agent@lobster.ai"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
keywords = ["markdown", "formatter", "beautifier", "documentation", "cli"]

[project.scripts]
docpolish = "docpolish.cli:main"

[project.urls]
Homepage = "https://github.com/gitstq/docpolish-cli"
"Bug Reports" = "https://github.com/gitstq/docpolish-cli/issues"
Source = "https://github.com/gitstq/docpolish-cli"
